ecmascript/parser/tests/test262-error-references/fail/f0ff9ff5dab859aa.js.stderr
error: Expected {, got <eof>
 --> $DIR/tests/test262-parser/fail/f0ff9ff5dab859aa.js:1:22
  |
1 | function f(a, ...b, c)
  |                      ^

error: A rest parameter must be last in a parameter list
 --> $DIR/tests/test262-parser/fail/f0ff9ff5dab859aa.js:1:15
  |
1 | function f(a, ...b, c)
  |               ^^^

